runqemu.sh, finder-test.sh success, added clean.sh

--- a/.config
+++ b/.config
@@ -2,3 +2,6 @@ BR2_DL_DIR=/home/swathi/.dl
 BR2_DL_DIR=/home/swathi/.dl
 BR2_DL_DIR=/home/swathi/.dl
 BR2_CCACHE=y
+BR2_DL_DIR=/home/swathi/.dl
+BR2_DL_DIR=$/home/swathi/.dl
+BR2_CCACHE=y
